xpath.properties: - Исправил allProductsOnPage (вместо //article было написано //articles)

--- a/src/test/resources/xpath.properties
+++ b/src/test/resources/xpath.properties
@@ -1,6 +1,6 @@
 yandexMarketLink = "//a[contains(./*, 'Маркет') or contains(@data-id, 'market')]"
 computerCategoryLink = "//a[contains(@href, '/catalog--kompiuternaia-tekhnika') or contains(./*, 'Компьютеры')]"
-notebookSubcategoryLink = "//a[contains(@href, 'https://market.yandex.ru/catalog--noutbuki') or contains(./*, 'Ноутбуки')]"
+notebookSubcategoryLink = "//a[contains(@href, 'https://market.yandex.page.ru/catalog--noutbuki') or contains(./*, 'Ноутбуки')]"
 minPriceInputText = "//*[contains(./*, 'Цена, ₽')]//input[../*[contains(@aria-label, 'Цена от')] = 'от' or (@type = 'text' and contains(@name, 'Цена от'))]"
 maxPriceInputText = "//*[contains(./*, 'Цена, ₽')]//input[../*[contains(@aria-label, 'Цена до')] = 'до' or (@type = 'text' and contains(@name, 'Цена до'))]"
 manufacturerHPCheckbox = "//input[../*[contains(.,'HP')] or (@type = 'checkbox' and contains(@name,'Производитель HP'))]"
