--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,16 @@
         <allure-maven.configuration.reportVersion>2.6.0</allure-maven.configuration.reportVersion>
         <junit-jupiter-engine.version>5.4.0</junit-jupiter-engine.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
+        <junit-jupiter-api.version>5.7.0</junit-jupiter-api.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -109,6 +116,16 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
