pom.xml: - Немного подразобрал зависимости (был использован не тот артефакт для работы с junit)
xpath.properties:
- Поправил опечатку

--- a/src/test/resources/xpath.properties
+++ b/src/test/resources/xpath.properties
@@ -3,7 +3,7 @@ computerCategoryLink = "//a[contains(@href, '/catalog--kompiuternaia-tekhnika') 
 notebookSubcategoryLink = "//a[contains(@href, 'https://market.yandex.page.ru/catalog--noutbuki') or contains(./*, 'Ноутбуки')]"
 minPriceInputText = "//*[contains(./*, 'Цена, ₽')]//input[../*[contains(@aria-label, 'Цена от')] = 'от' or (@type = 'text' and contains(@name, 'Цена от'))]"
 maxPriceInputText = "//*[contains(./*, 'Цена, ₽')]//input[../*[contains(@aria-label, 'Цена до')] = 'до' or (@type = 'text' and contains(@name, 'Цена до'))]"
-manufacturerHPCheckbox = "//input[../*[contains(.,'HP')] or (@type = 'checkbox' and contains(@name,'Производитель HP'))]"
+manufacturerHpCheckbox = "//input[../*[contains(.,'HP')] or (@type = 'checkbox' and contains(@name,'Производитель HP'))]"
 manufacturerLenovoCheckbox = "//input[../*[contains(.,'Lenovo')] or (@type = 'checkbox' and contains(@name,'Производитель Lenovo'))]"
 manufacturerShowAllButton = "//*[./*[.='Производитель']]//button[contains(.,'Показать всё')]"
 manufacturerSearchInputText = "//*[./*[.='Производитель']]//input[contains(@name, 'Поле поиска')]"
