--- a/pom.xml
+++ b/pom.xml
@@ -16,24 +16,11 @@
         <selenium-java.version>3.141.59</selenium-java.version>
         <allure-maven.version>2.9</allure-maven.version>
         <allure-maven.configuration.reportVersion>2.6.0</allure-maven.configuration.reportVersion>
-        <junit-jupiter-engine.version>5.4.0</junit-jupiter-engine.version>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
-        <junit-jupiter-api.version>5.7.0</junit-jupiter-api.version>
+        <junit-jupiter.version>5.7.0</junit-jupiter.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter-api.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter-engine.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
@@ -44,6 +31,12 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
