SberTest.java Реализует тестовое задание (черновой вариант)
pom.xml
Изменение конфигурации проекта
После реализации минимального функционала (методов, классов) SberTest.java, и попытки его запустить выяснилось, что некоторые зависимости для проекта были выбраны не верно. Исправил. Тест запускается

WebPage.java
Основа для класс страниц (хранит в себе webDriver)
Пока что, не придумал как расширить его функционал

xpath.properties
После запуска теста, выяснилось, что часть написанных xpath запросов, работают не совсем корректно (или не совсем стабильно). Переписал.
На данный момент содержит в себе черновые запросы, которые в последствии будут удалены

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <allure-maven.configuration.reportVersion>2.6.0</allure-maven.configuration.reportVersion>
         <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <junit.version>5.0.0</junit.version>
     </properties>
 
     <dependencies>
@@ -33,11 +34,48 @@
             <version>${selenium-java.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>4.12.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.6.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -109,16 +147,6 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 
 </project>
