--- a/src/test/resources/xpath.properties
+++ b/src/test/resources/xpath.properties
@@ -13,3 +13,4 @@ allProductsOnPage = "//article"
 firstProductTitleOnPage = "//article[1]//*[@data-zone-name = 'title']//a[@title and @target = '_blank']//*[contains(., 'HP') or contains(., 'Lenovo')]"
 searchInputText = "//input[@id = 'header-search']"
 searchButtonSubmit = "//form[@action = '/search' and @role = 'search' and @aria-label = 'Искать']//button[@type = 'submit' and ./*[contains(., 'Найти')]]"
+yandexRu_serviceLinkFormat = "//a[ancestor::div[contains(@class, '%s')] and (contains(@class, '%s' and @data-id = '%s') and child::div = '%s']"
