--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <junit-platform-launcher.version>1.7.0</junit-platform-launcher.version>
         <junit.version>5.7.0</junit.version>
         <allure-junit5.version>2.13.5</allure-junit5.version>
+
+        <log4j-slf4j-impl.version>2.13.3</log4j-slf4j-impl.version>
+        <aspectjweaver.version>1.9.6</aspectjweaver.version>
     </properties>
 
     <dependencies>
@@ -57,6 +60,24 @@
             <artifactId>allure-junit5</artifactId>
             <version>${allure-junit5.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j-slf4j-impl.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
